# FastAPI-Template-Vanilla

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml  run.sh
backend/app/: main.py
backend/test/: test_main.py
backend/test/integration_tests/: test_integration_main.py
backend/test/unit_tests/: test_unit_main.py
